<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Simple Text Editor</string>
    <string name="app_name_settings">Simple Text Editor - Opciones</string>
    <string name="Open">Abrir</string>
    <string name="New">Nuevo</string>
    <string name="Save">Guardar</string>
    <string name="Save_As">Guardar Como</string>
    <string name="Location">Localización: %s</string>
    <string name="Select">Seleccionar</string>
    <string name="File_Name">Nombre del Archivo:</string>
    <string name="Cancel">Cancelar</string>
    <string name="Create">Guardar</string>
    <string name="No_Data">No Data</string>
    <string name="File_not_saved">Archivo no guardado:</string>
    <string name="Save_current_file">¿Guardar el archivo actual?</string>
    <string name="Yes">Si</string>
    <string name="No">No</string>
    <string name="OK">OK</string>
    <string name="File_Written">Archivo guardado</string>
    <string name="Can_not_write_file">No se puede guardar el archivo</string>
    <string name="File_opened_">Archivo abierto %s</string>
    <string name="File_not_found">Archivo no encontrado</string>
    <string name="Can_not_read_file">No se puede leer el archivo</string>
    <string name="Operation_Canceled">Operación Cancelada</string>
    <string name="Settings">Opciones</string>
    <string name="Continue">Continuar</string>
    <string name="about_message">Esto es un editor de texto básico</string>
    <string name="Choose_Language">Choose Language</string>
    <string name="Language">Idioma</string>
    <string name="Click_to_change_language">сlick to change language of interface</string>
    <string name="searchLabel">Search</string>
    <string name="searchHint">Text</string>
    <string name="s_not_found">"%s" not found</string>
    <string name="opened_last_edited_file">opened last edited file %s</string>
    <string name="Search">Search</string>
    <string name="Choose_a_color">Choose a color</string>
    <string name="Open_File">Open File</string>
    <string name="Save_File">Save File</string>
    <string name="Click_to_change_encoding">Click para cambiar la codificación</string>
    <string name="Encoding">Codificación</string>
    <string name="Line_endings">Finales de línea</string>
    <string name="Line_Delimiters">Delimitadores de línea</string>
    <string name="Font_Size">Tamaño de la fuente</string>
    <string name="Choose_a_font_size">Elige el tamaño de la fuente</string>
    <string name="Font_Color">Color de la fuente</string>
    <string name="Choose_a_font_color">Elige el color de la fuente</string>
    <string name="Background_Color">Color de fondo</string>
    <string name="Choose_a_background_color">Elige el color de fondo</string>
    <string name="Just_a_little_FYI">Just a little FYI</string>
    <string name="About_Editor">About Editor</string>
    <string name="Warranty_Information">Warranty Information</string>
    <string name="Font">Fuente</string>
    <string name="Choose_a_font_type">Elige el tipo de fuente</string>
    <string name="Open_Last">Abrir el último</string>
    <string name="To_open_last_edited_file">Para abrir el último archivo al iniciar el editor</string>
    <string name="Main_Settings">Opciones principales</string>
    <string name="Appearance">Apariencia</string>
    <string name="You_have_made_some_changes">Has realizado algunos cambios</string>
    <string name="Are_you_sure_to_quit">¿Estas seguro de que quieres salir de la aplicación?</string>
    <string name="File_already_exists">El archivo ya existe</string>
    <string name="Existing_file_will_be_overwritten">Se va a sobreescribir el archivo actual. ¿Quieres continuar?</string>
    <string name="Exit">Salir</string>
    <string name="Type_Something_Here">Type Something Here</string>
    <string name="Legacy_file_picker">Selector de archivos tradicional</string>
    <string name="Use_legacy_file_picker">Usar el selector de archivos tradicional</string>
    <string name="action_edit">Editar</string>
    <string name="action_undo">Deshacer</string>
    <string name="action_redo">Rehacer</string>
</resources>